Working dashboards with pentaho

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
@@ -66,7 +67,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "test-dashboards:build"
+            "browserTarget": "test-dashboards:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
@@ -123,6 +125,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "test-dashboards"
+    }
+  },
+  "defaultProject": "test-dashboards",
+  "cli": {
+    "analytics": false
+  }
 }
